# simd-euclidean

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: f32.rs  f64.rs
src/: lib.rs  macros.rs
