[package]
name = "simd_euclidean"
version = "0.1.1"
authors = ["Michael Lazear <lazear@scripps.edu>"]
edition = "2018"
license = "MIT"

[dev-dependencies]
criterion = "0.5.1"
# symagen = { path = "../SyMaGen" }
symagen = "0.1.1"

[[bench]]
name = "f32"
harness = false

[[bench]]
name = "f64"
harness = false
